Updating index.html to see whether it clears cache
For some reason, new content is not being displayed.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ Home of Srđan Đukić
 <div class=about>
 <h1></h1>
 <h2></h2>
+<ul>
+  <li><a href="https://github.com/srkiNZ84">GitHub</a></li>
+  </ul>
 </div>
 </section>
 </div>
