--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <meta property="og:description" content="Srđan Đukić's personal website">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://srdan.geek.nz/">
-<title>Home of Srđan Đukić</title>
-<link rel=canonical href=https://srdan.geek.nz/>
+<title>Home of Srđan Đukić</title><link rel=canonical href=https://srdan.geek.nz/>
 <link rel=preload href="/fonts/forkawesome-webfont.woff2?v=1.2.0" as=font type=font/woff2 crossorigin>
 <link rel=stylesheet href=/css/coder.min.708686f8ab8176e91d44fcbe488a0fe0333b94f405cf18a52383d67ba22f0ccb.css integrity="sha256-cIaG+KuBdukdRPy+SIoP4DM7lPQFzxilI4PWe6IvDMs=" crossorigin=anonymous media=screen>
 <link rel=stylesheet href=/css/coder-dark.min.aa883b9ce35a8ff4a2a5008619005175e842bb18a8a9f9cc2bbcf44dab2d91fa.css integrity="sha256-qog7nONaj/SipQCGGQBRdehCuxioqfnMK7z0Tastkfo=" crossorigin=anonymous media=screen>
@@ -25,15 +24,13 @@
 <link rel=apple-touch-icon href=/images/apple-touch-icon.png>
 <link rel=apple-touch-icon sizes=180x180 href=/images/apple-touch-icon.png>
 <link rel=alternate type=application/rss+xml href=/index.xml title="Home of Srđan Đukić">
-<meta name=generator content="Hugo 0.88.1">
-</head>
-<body class="preload-transitions colorscheme-auto">
+<meta name=generator content="Hugo 0.93.0">
+</head><body class="preload-transitions colorscheme-auto">
 <div class=float-container>
 <a id=dark-mode-toggle class=colorscheme-toggle>
 <i class="fa fa-adjust fa-fw" aria-hidden=true></i>
 </a>
-</div>
-<main class=wrapper>
+</div><main class=wrapper>
 <nav class=navigation>
 <section class=container>
 <a class=navigation-title href=/>
@@ -46,56 +43,35 @@ Home of Srđan Đukić
 <ul class=navigation-list>
 <li class=navigation-item>
 <a class=navigation-link href=/about/>About</a>
-</li>
-<li class=navigation-item>
+</li><li class=navigation-item>
 <a class=navigation-link href=/posts/>Blog</a>
-</li>
-<li class=navigation-item>
+</li><li class=navigation-item>
 <a class=navigation-link href=/projects/>Projects</a>
-</li>
-<li class=navigation-item>
+</li><li class=navigation-item>
 <a class=navigation-link href=/contact/>Contact me</a>
-</li>
-</ul>
-</section>
-</nav>
-<div class=content>
+</li></ul></section></nav><div class=content>
 <section class="container centered">
 <div class=about>
-<div class=avatar><img src="https://www.gravatar.com/avatar/c9ee32dcb3a2f1eca6c05cbf281b61ed?s=240&d=mp" alt=gravatar></div>
-<h1>Srđan Đukić</h1>
-<h2>DevOps<br>SRE<br></h2>
-<ul>
+<div class=avatar><img src="https://www.gravatar.com/avatar/c9ee32dcb3a2f1eca6c05cbf281b61ed?s=240&d=mp" alt=gravatar></div><h1>Srđan Đukić</h1><h2>DevOps<br>SRE<br></h2><ul>
 <li>
 <a href=https://github.com/srkiNZ84/ aria-label=Github>
 <i class="fa fa-github" aria-hidden=true></i>
 </a>
-</li>
-<li>
+</li><li>
 <a href=https://gitlab.com/srkiNZ/ aria-label=Gitlab>
 <i class="fa fa-gitlab" aria-hidden=true></i>
 </a>
-</li>
-<li>
+</li><li>
 <a href=https://twitter.com/srkiNZ/ aria-label=Twitter>
 <i class="fa fa-twitter" aria-hidden=true></i>
 </a>
-</li>
-<li>
+</li><li>
 <a href=https://www.linkedin.com/in/srdandukic/ aria-label=LinkedIn>
 <i class="fa fa-linkedin" aria-hidden=true></i>
 </a>
-</li>
-<li>
+</li><li>
 <a href=https://srdan.geek.nz/index.xml aria-label=RSS rel=alternate type=application/rss+xml>
 <i class="fa fa-rss" aria-hidden=true></i>
 </a>
-</li>
-</ul>
-</div>
-</section>
-</div>
-</main>
-<script src=/js/coder.min.03b17769f4f91ae35667e1f2a1ca8c16f50562576cf90ff32b3179926914daa5.js integrity="sha256-A7F3afT5GuNWZ+HyocqMFvUFYlds+Q/zKzF5kmkU2qU="></script>
-</body>
-</html>
+</li></ul></div></section></div></main><script src=/js/coder.min.f453d26c79f010446cf0d9770197f77de32c07b7a5512d141a286247fe154a22.js integrity="sha256-9FPSbHnwEERs8Nl3AZf3feMsB7elUS0UGihiR/4VSiI="></script>
+</body></html>
